--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,8 +2,64 @@
 @use "partials/variabiles.scss" as *;
 @use "partials/mixins.scss" as *;
 
-h1 {
-    color: red;
-    text-decoration: line-through;
-    text-align: center;
+header{
+    width: 100%;
+    height: 200px;
+    border: 1px black solid;
+    .top-header{
+        background-color: black;
+        height: 70%;
+
+    }
+    .bottom-header{
+        background-color: white;
+        height: 30%;
+        .logo{
+            width: 40%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                height: 80%;
+            }
+        }
+    }
+}
+
+main{
+    width: 100%;
+    height: 400px;
+    border: 1px black solid;
+    .top-main{
+        height: 15%;
+        background-color: black;
+
+    }
+    .mid-main{
+        height: 20%;
+        background-color: blue;
+    }
+    .low-main{
+        height: 65%;
+        background-image: url(../../../public/img/footer-bg.jpg);
+    }
+}
+
+footer{
+    width: 100%;
+    height: 200px;
+    .top-footer{
+        background-color: rgb(55, 55, 55);
+        height: 40%;
+        
+
+    }
+    .bottom-footer{
+        background-color: black;
+        height: 60%;
+        
+        
+    }
+
 }
