--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,11 @@
 @use "partials/variabiles.scss" as *;
 @use "partials/mixins.scss" as *;
 
+.active{
+    color: blue;
+    text-decoration: underline;
+}
+
 header{
     width: 100%;
     height: 200px;
@@ -9,11 +14,13 @@ header{
     .top-header{
         background-color: black;
         height: 70%;
+        
 
     }
     .bottom-header{
         background-color: white;
         height: 30%;
+        display: flex;
         .logo{
             width: 40%;
             height: 100%;
@@ -22,6 +29,20 @@ header{
             align-items: center;
             img{
                 height: 80%;
+            }
+        }
+        .link{
+            width: 60%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            li{
+                display: inline-block;
+                padding: 0 10px;
+                a{
+                    text-decoration: none;
+                    color: black;
+                }
             }
         }
     }
@@ -34,6 +55,16 @@ main{
     .top-main{
         height: 15%;
         background-color: black;
+        > div{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding-left: 50px;
+            color: #ffffff;
+            a{
+                color: #ffffff;
+            }
+        }
 
     }
     .mid-main{
