--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -50,11 +50,17 @@ header{
 
 main{
     width: 100%;
-    height: 400px;
+
     border: 1px black solid;
     .top-main{
-        height: 15%;
-        background-color: black;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        background-color: black;  
+        padding: 0px 100px;
+        padding-bottom: 80px;
+        position: relative;
+        z-index: 1;
         > div{
             height: 100%;
             display: flex;
@@ -68,29 +74,64 @@ main{
 
     }
     .mid-main{
-        height: 20%;
+        
         background-color: blue;
+        position: relative;
+        z-index: 1;
+        > ul{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            li{
+                display: inline-block;
+                padding: 0 20px;
+                color: aliceblue;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+                
+                img{
+                    width: 50px;
+                    padding: 0 10px;
+                   
+                }
+            }
+        }
     }
     .low-main{
-        height: 65%;
+        height: 300px;
         background-image: url(../../../public/img/footer-bg.jpg);
+        display: flex;
+        .left-side{
+            height: 100%;
+            width: 50%;
+            display: flex;
+            justify-content: space-around;
+            ul{
+                color: #ffffff;
+                padding: 10px 0;
+                li{
+                    list-style: none;
+                    color: gray;
+                }
+                
+            }
+           
+        }
+        .right-side{
+            height: 100%;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                height: 140%;
+
+                
+            }
+        }
     }
 }
 
-footer{
-    width: 100%;
-    height: 200px;
-    .top-footer{
-        background-color: rgb(55, 55, 55);
-        height: 40%;
-        
-
-    }
-    .bottom-footer{
-        background-color: black;
-        height: 60%;
-        
-        
-    }
-
-}
